# kanana

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
eduflow_cli/: __init__.py
kanana_cli/: __init__.py
marketing/instagram/: viral-pack.md
qa/: README.md  cases.json  misconception-taxonomy.json
qa/cases/explain/: humanities.json  math.json  science.json  social.json
qa/cases/quiz/: humanities.json  math.json  science.json  social.json
qa/cases/review/: humanities.json  math-misconceptions.json  math.json  science-misconceptions.json  science.json  social-misconceptions.json  social.json
skills/: README.md
skills/claude-code/: SKILL.md
skills/codex-cli/: SKILL.md
skills/openclaw/: SKILL.md
skills/opencode/: SKILL.md
src/eduflow_cli/: config.py  main.py  qa_harness.py
src/eduflow_cli/cli/: common.py  explain.py  health.py  kakao.py  quiz.py  review.py  safety.py
src/eduflow_cli/contracts/: common.py  errors.py  requests.py  responses.py
src/eduflow_cli/domain/: audience.py  knowledge.py  prompts.py  sessions.py
src/eduflow_cli/output/: exit_codes.py  structured.py
src/eduflow_cli/runtime/: __init__.py  healthcheck.py  model_registry.py  ollama_client.py
src/eduflow_cli/safety/: classifier.py  (+2 more)
src/kanana_cli/: config.py  main.py  qa_harness.py
tests/cli/: test_end_to_end_json.py  test_explain.py  test_kakao_template.py  test_quality.py  test_quiz.py  test_review.py  test_session_logging.py
tests/contracts/: test_contracts.py
tests/qa/: test_harness.py
tests/runtime/: test_ollama_client.py
tests/safety/: test_pipeline.py
(+28 files in other folders)
